wordpress/base/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: devidevops447/wordpress-beta:v434343
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-pvc
          mountPath: /var/www/html/wp-content/uploads
        - name: wp-config-volume
          mountPath: /var/www/html/wp-config.php
          subPath: wp-config.php
      volumes:
      - name: wp-config-volume
        configMap:
          name: wp-config
      - name: wordpress-pvc
        persistentVolumeClaim:
          claimName: wordpress-pvc
      - name: upload-volume
        configMap:
          name: upload
      - name: wordpress-pvc
        persistentVolumeClaim:
          claimName: wordpress-pvc
