wordpress/base/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: workshop
spec:
  type: ClusterIP  # Changed from NodePort
  selector:
    app: wordpress
  ports:
    - port: 80        # Service port
      targetPort: 30011  # Container port
      protocol: TCP
